# id-mapper

./: .dockerignore  .editorconfig  .env  .gitignore  .travis.yml  Dockerfile  LATEST_BASE_TAG  Makefile  README.md  build-test-db.sh  client.py  dev-requirements.in  docker-compose.yml  gunicorn.py  load.py  load_chem.py  load_csv.py  load_gene.py  push_to_hub_travis.sh  pyproject.toml  requirements.in  requirements.txt  setup.cfg  test_integration.py
cleandb/databases/graph.db/: neostore
cleandb/dbms/: auth
deployment/: deployment.yml  ingress.yml  persistentvolume.yml  service.yml
id_mapper/: __init__.py  app.py  graph.py  metanetx.py  middleware.py  settings.py  stubs.py
requirements/: requirements.in  requirements.txt
scripts/: deploy.sh  install_gcloud.sh  install_kubectl.sh  verify_license_headers.sh
src/: load_chem_xref.py  load_gene.py
src/id_mapper/: __init__.py  app.py  errorhandlers.py  graph.py  metanetx.py  middleware.py  resources.py  schemas.py  settings.py  wsgi.py
tests/: conftest.py  test_integration.py
tests/integration/: test_endpoints.py  test_neo4j.py
tests/unit/: test_app.py
