[metadata]
name = id-mapper
url = https://github.com/DD-DeCaF/id-mapper
author = DD-DeCaF Team
author_email = niso@biosustain.dtu.dk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.6
license = Apache Software License Version 2.0
description = ID mapper for biological entities (metabolites, reactions, genes, etc)
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
id_mapper =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
ignore = D100,D101,D102,D103,D104,D105,D106,D107,W504
max-line-length = 80
exclude =
    __init__.py
    docs

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[pydocstyle]
match_dir = src/id_mapper

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_imports = 2
