[metadata]
name = id-mapper
url = https://github.com/DD-DeCaF/id-mapper
author = DD-DeCaF Team
author_email = niso@biosustain.dtu.dk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.6
license = Apache Software License Version 2.0
description = ID mapper for biological entities (metabolites, reactions, genes, etc)
long_description = file: README.md
keywords =

################################################################################
# Testing tools configuration                                                  #
################################################################################

[tool:pytest]
testpaths =
    tests
markers =
    raises

[coverage:paths]
source =
    src/id_mapper

[coverage:run]
branch = true
parallel = true

[coverage:report]
exclude_lines =
# Have to re-enable the standard pragma
    pragma: no cover
precision = 2

[flake8]
max-line-length = 80
exclude = __init__.py
ignore =
# We do not require docstrings on all public functions and classes. We
# encourage them but ultimately it is decided during review.
    D100
    D101
    D102
    D103
    D104
    D105
    D106
    D107
# The following conflict with `black` which is the more pedantic.
    E203
    W503
    D202

[isort]
skip = __init__.py
line_length = 80
indent = 4
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_after_imports = 2
known_first_party = id_mapper
known_third_party =
    flask
    flask_apispec
    flask_cors
    marshmallow
    pytest
    raven
    werkzeug
